librats/src/librats_c.h

// Opaque handle to a RatsClient instance
typedef void* rats_client_t;
// Logging controls (optional helpers)
RATS_API void rats_set_logging_enabled(int enabled);
RATS_API void rats_set_log_level(const char* level_str); // "DEBUG", "INFO", "WARN", "ERROR"
RATS_API void rats_set_log_file_path(rats_client_t client, const char* file_path);
RATS_API char* rats_get_log_file_path(rats_client_t client); // caller must free
RATS_API void rats_set_log_colors_enabled(rats_client_t client, int enabled);
RATS_API int rats_is_log_colors_enabled(rats_client_t client);
RATS_API void rats_set_log_timestamps_enabled(rats_client_t client, int enabled);
RATS_API int rats_is_log_timestamps_enabled(rats_client_t client);
RATS_API void rats_set_log_rotation_size(rats_client_t client, size_t max_size_bytes);
RATS_API void rats_set_log_retention_count(rats_client_t client, int count);
RATS_API void rats_clear_log_file(rats_client_t client);
// Error codes
typedef enum {
    RATS_SUCCESS = 0,
    RATS_ERROR_INVALID_HANDLE = -1,
    RATS_ERROR_INVALID_PARAMETER = -2,
    RATS_ERROR_NOT_RUNNING = -3,
    RATS_ERROR_OPERATION_FAILED = -4,
    RATS_ERROR_PEER_NOT_FOUND = -5,
    RATS_ERROR_MEMORY_ALLOCATION = -6,
    RATS_ERROR_JSON_PARSE = -7
} rats_error_t;
typedef void (*rats_peer_discovered_cb)(void* user_data, const char* host, int port, const char* service_name);
typedef void (*rats_message_cb)(void* user_data, const char* peer_id, const char* message_data);
// Message Exchange API
RATS_API rats_error_t rats_on_message(rats_client_t client, const char* message_type, 
                                         rats_message_cb callback, void* user_data);
RATS_API rats_error_t rats_send_message(rats_client_t client, const char* peer_id, 
                                           const char* message_type, const char* data);
RATS_API rats_error_t rats_broadcast_message(rats_client_t client, const char* message_type, 
                                                const char* data);
RATS_API char* rats_send_directory(rats_client_t client, const char* peer_id, const char* directory_path, const char* remote_directory_name, int recursive); // returns transfer_id, caller must free
RATS_API char* rats_request_file(rats_client_t client, const char* peer_id, const char* remote_file_path, const char* local_path); // returns transfer_id, caller must free
RATS_API char* rats_request_directory(rats_client_t client, const char* peer_id, const char* remote_directory_path, const char* local_directory_path, int recursive); // returns transfer_id, caller must free
RATS_API rats_error_t rats_accept_directory_transfer(rats_client_t client, const char* transfer_id, const char* local_path);
RATS_API rats_error_t rats_reject_directory_transfer(rats_client_t client, const char* transfer_id, const char* reason);
RATS_API rats_error_t rats_pause_file_transfer(rats_client_t client, const char* transfer_id);
RATS_API rats_error_t rats_resume_file_transfer(rats_client_t client, const char* transfer_id);
RATS_API char* rats_get_file_transfer_progress_json(rats_client_t client, const char* transfer_id); // caller must free
RATS_API char* rats_get_file_transfer_statistics_json(rats_client_t client); // caller must free
// File transfer callbacks
typedef void (*rats_file_request_cb)(void* user_data, const char* peer_id, const char* transfer_id, const char* remote_path, const char* filename);
typedef void (*rats_directory_request_cb)(void* user_data, const char* peer_id, const char* transfer_id, const char* remote_path, const char* directory_name);
typedef void (*rats_directory_progress_cb)(void* user_data, const char* transfer_id, int files_completed, int total_files, const char* current_file);
typedef void (*rats_file_progress_cb)(void* user_data, const char* transfer_id, int progress_percent, const char* status);
// Additional file transfer callbacks
RATS_API void rats_set_file_request_callback(rats_client_t client, rats_file_request_cb cb, void* user_data);
RATS_API void rats_set_directory_request_callback(rats_client_t client, rats_directory_request_cb cb, void* user_data);
RATS_API void rats_set_file_progress_callback(rats_client_t client, rats_file_progress_cb cb, void* user_data);
RATS_API void rats_set_directory_progress_callback(rats_client_t client, rats_directory_progress_cb cb, void* user_data);
RATS_API void rats_set_peer_discovered_callback(rats_client_t client, rats_peer_discovered_cb cb, void* user_data);
RATS_API int rats_is_gossipsub_running(rats_client_t client);
RATS_API int rats_is_subscribed_to_topic(rats_client_t client, const char* topic);
RATS_API char** rats_get_subscribed_topics(rats_client_t client, int* count); // caller must free array and strings
RATS_API rats_error_t rats_publish_json_to_topic(rats_client_t client, const char* topic, const char* json_str);
RATS_API char** rats_get_topic_peers(rats_client_t client, const char* topic, int* count); // caller must free array and strings
RATS_API char** rats_get_topic_mesh_peers(rats_client_t client, const char* topic, int* count); // caller must free array and strings
RATS_API char* rats_get_gossipsub_statistics_json(rats_client_t client); // caller must free
// GossipSub callbacks
typedef void (*rats_topic_message_cb)(void* user_data, const char* peer_id, const char* topic, const char* message);
typedef void (*rats_topic_json_message_cb)(void* user_data, const char* peer_id, const char* topic, const char* json_str);
typedef void (*rats_topic_peer_joined_cb)(void* user_data, const char* peer_id, const char* topic);
typedef void (*rats_topic_peer_left_cb)(void* user_data, const char* peer_id, const char* topic);
RATS_API void rats_set_topic_message_callback(rats_client_t client, const char* topic, rats_topic_message_cb cb, void* user_data);
RATS_API void rats_set_topic_json_message_callback(rats_client_t client, const char* topic, rats_topic_json_message_cb cb, void* user_data);
RATS_API void rats_set_topic_peer_joined_callback(rats_client_t client, const char* topic, rats_topic_peer_joined_cb cb, void* user_data);
RATS_API void rats_set_topic_peer_left_callback(rats_client_t client, const char* topic, rats_topic_peer_left_cb cb, void* user_data);
RATS_API void rats_clear_topic_callbacks(rats_client_t client, const char* topic);
// NAT Traversal and STUN
RATS_API rats_error_t rats_discover_and_ignore_public_ip(rats_client_t client, const char* stun_server, int stun_port);
RATS_API char* rats_get_public_ip(rats_client_t client); // caller must free
RATS_API int rats_detect_nat_type(rats_client_t client); // Returns NAT type as integer
RATS_API char* rats_get_nat_characteristics_json(rats_client_t client); // caller must free
RATS_API void rats_add_ignored_address(rats_client_t client, const char* ip_address);
RATS_API char* rats_get_nat_traversal_statistics_json(rats_client_t client); // caller must free
// ICE coordination
RATS_API char* rats_create_ice_offer(rats_client_t client, const char* peer_id); // caller must free JSON string
RATS_API rats_error_t rats_connect_with_ice(rats_client_t client, const char* peer_id, const char* ice_offer_json);
RATS_API rats_error_t rats_handle_ice_answer(rats_client_t client, const char* peer_id, const char* ice_answer_json);
// Configuration persistence
RATS_API rats_error_t rats_load_configuration(rats_client_t client);
RATS_API rats_error_t rats_save_configuration(rats_client_t client);
RATS_API rats_error_t rats_set_data_directory(rats_client_t client, const char* directory_path);
RATS_API char* rats_get_data_directory(rats_client_t client); // caller must free
RATS_API int rats_load_and_reconnect_peers(rats_client_t client);
RATS_API int rats_load_historical_peers(rats_client_t client);
RATS_API int rats_save_historical_peers(rats_client_t client);
RATS_API void rats_clear_historical_peers(rats_client_t client);
RATS_API char** rats_get_historical_peer_ids(rats_client_t client, int* count); // caller must free array and strings