librats/python/librats_py/ctypes_wrapper.py

        
        # Message Exchange API
        self.lib.rats_on_message.argtypes = [c_void_p, c_char_p, MessageCallbackType, c_void_p]
        self.lib.rats_on_message.restype = c_int
        
        self.lib.rats_send_message.argtypes = [c_void_p, c_char_p, c_char_p, c_char_p]
        self.lib.rats_send_message.restype = c_int
        
        self.lib.rats_broadcast_message.argtypes = [c_void_p, c_char_p, c_char_p]
        self.lib.rats_broadcast_message.restype = c_int
        
        # Advanced File Transfer
        self.lib.rats_send_directory.argtypes = [c_void_p, c_char_p, c_char_p, c_char_p, c_int]
        self.lib.rats_send_directory.restype = c_void_p
        
        self.lib.rats_request_file.argtypes = [c_void_p, c_char_p, c_char_p, c_char_p]
        self.lib.rats_request_file.restype = c_void_p
        
        self.lib.rats_request_directory.argtypes = [c_void_p, c_char_p, c_char_p, c_char_p, c_int]
        self.lib.rats_request_directory.restype = c_void_p
        
        self.lib.rats_accept_directory_transfer.argtypes = [c_void_p, c_char_p, c_char_p]
        self.lib.rats_accept_directory_transfer.restype = c_int
        
        self.lib.rats_reject_directory_transfer.argtypes = [c_void_p, c_char_p, c_char_p]
        self.lib.rats_reject_directory_transfer.restype = c_int
        
        self.lib.rats_pause_file_transfer.argtypes = [c_void_p, c_char_p]
        self.lib.rats_pause_file_transfer.restype = c_int
        
        self.lib.rats_resume_file_transfer.argtypes = [c_void_p, c_char_p]
        self.lib.rats_resume_file_transfer.restype = c_int
        
        self.lib.rats_get_file_transfer_progress_json.argtypes = [c_void_p, c_char_p]
        self.lib.rats_get_file_transfer_progress_json.restype = c_void_p
        
        self.lib.rats_get_file_transfer_statistics_json.argtypes = [c_void_p]
        self.lib.rats_get_file_transfer_statistics_json.restype = c_void_p
        
        # File transfer callbacks
        self.lib.rats_set_file_request_callback.argtypes = [c_void_p, FileRequestCallbackType, c_void_p]
        self.lib.rats_set_file_request_callback.restype = None
        
        self.lib.rats_set_directory_request_callback.argtypes = [c_void_p, DirectoryRequestCallbackType, c_void_p]
        self.lib.rats_set_directory_request_callback.restype = None
        
        self.lib.rats_set_file_progress_callback.argtypes = [c_void_p, FileProgressCallbackType, c_void_p]
        self.lib.rats_set_file_progress_callback.restype = None
        
        self.lib.rats_set_directory_progress_callback.argtypes = [c_void_p, DirectoryProgressCallbackType, c_void_p]
        self.lib.rats_set_directory_progress_callback.restype = None
        
        # Enhanced GossipSub
        self.lib.rats_is_gossipsub_running.argtypes = [c_void_p]
        self.lib.rats_is_gossipsub_running.restype = c_int
        
        self.lib.rats_is_subscribed_to_topic.argtypes = [c_void_p, c_char_p]
        self.lib.rats_is_subscribed_to_topic.restype = c_int
        
        self.lib.rats_get_subscribed_topics.argtypes = [c_void_p, POINTER(c_int)]
        self.lib.rats_get_subscribed_topics.restype = POINTER(c_char_p)
        
        self.lib.rats_publish_json_to_topic.argtypes = [c_void_p, c_char_p, c_char_p]
        self.lib.rats_publish_json_to_topic.restype = c_int
        
        self.lib.rats_get_topic_peers.argtypes = [c_void_p, c_char_p, POINTER(c_int)]
        self.lib.rats_get_topic_peers.restype = POINTER(c_char_p)
        
        self.lib.rats_get_topic_mesh_peers.argtypes = [c_void_p, c_char_p, POINTER(c_int)]
        self.lib.rats_get_topic_mesh_peers.restype = POINTER(c_char_p)
        
        self.lib.rats_get_gossipsub_statistics_json.argtypes = [c_void_p]
        self.lib.rats_get_gossipsub_statistics_json.restype = c_void_p
        
        # GossipSub topic callbacks
        self.lib.rats_set_topic_message_callback.argtypes = [c_void_p, c_char_p, TopicMessageCallbackType, c_void_p]
        self.lib.rats_set_topic_message_callback.restype = None
        
        self.lib.rats_set_topic_json_message_callback.argtypes = [c_void_p, c_char_p, TopicJsonMessageCallbackType, c_void_p]
        self.lib.rats_set_topic_json_message_callback.restype = None
        
        self.lib.rats_set_topic_peer_joined_callback.argtypes = [c_void_p, c_char_p, TopicPeerJoinedCallbackType, c_void_p]
        self.lib.rats_set_topic_peer_joined_callback.restype = None
        
        self.lib.rats_set_topic_peer_left_callback.argtypes = [c_void_p, c_char_p, TopicPeerLeftCallbackType, c_void_p]
        self.lib.rats_set_topic_peer_left_callback.restype = None
        
        self.lib.rats_clear_topic_callbacks.argtypes = [c_void_p, c_char_p]
        self.lib.rats_clear_topic_callbacks.restype = None
        
        # Peer discovery callback
        self.lib.rats_set_peer_discovered_callback.argtypes = [c_void_p, PeerDiscoveredCallbackType, c_void_p]
        self.lib.rats_set_peer_discovered_callback.restype = None
        
        # NAT Traversal and STUN
        self.lib.rats_discover_and_ignore_public_ip.argtypes = [c_void_p, c_char_p, c_int]
        self.lib.rats_discover_and_ignore_public_ip.restype = c_int
        
        self.lib.rats_get_public_ip.argtypes = [c_void_p]
        self.lib.rats_get_public_ip.restype = c_void_p
        
        self.lib.rats_detect_nat_type.argtypes = [c_void_p]
        self.lib.rats_detect_nat_type.restype = c_int
        
        self.lib.rats_get_nat_characteristics_json.argtypes = [c_void_p]
        self.lib.rats_get_nat_characteristics_json.restype = c_void_p
        
        self.lib.rats_add_ignored_address.argtypes = [c_void_p, c_char_p]
        self.lib.rats_add_ignored_address.restype = None
        
        self.lib.rats_get_nat_traversal_statistics_json.argtypes = [c_void_p]
        self.lib.rats_get_nat_traversal_statistics_json.restype = c_void_p
        
        # ICE coordination
        self.lib.rats_create_ice_offer.argtypes = [c_void_p, c_char_p]
        self.lib.rats_create_ice_offer.restype = c_void_p
        
        self.lib.rats_connect_with_ice.argtypes = [c_void_p, c_char_p, c_char_p]
        self.lib.rats_connect_with_ice.restype = c_int
        
        self.lib.rats_handle_ice_answer.argtypes = [c_void_p, c_char_p, c_char_p]
        self.lib.rats_handle_ice_answer.restype = c_int
        
        # Configuration persistence
        self.lib.rats_load_configuration.argtypes = [c_void_p]
        self.lib.rats_load_configuration.restype = c_int
        
        self.lib.rats_save_configuration.argtypes = [c_void_p]
        self.lib.rats_save_configuration.restype = c_int
        
        self.lib.rats_set_data_directory.argtypes = [c_void_p, c_char_p]
        self.lib.rats_set_data_directory.restype = c_int
        
        self.lib.rats_get_data_directory.argtypes = [c_void_p]
        self.lib.rats_get_data_directory.restype = c_void_p
        
        self.lib.rats_load_and_reconnect_peers.argtypes = [c_void_p]
        self.lib.rats_load_and_reconnect_peers.restype = c_int
        
        self.lib.rats_load_historical_peers.argtypes = [c_void_p]
        self.lib.rats_load_historical_peers.restype = c_int
        
        self.lib.rats_save_historical_peers.argtypes = [c_void_p]
        self.lib.rats_save_historical_peers.restype = c_int
        
        self.lib.rats_clear_historical_peers.argtypes = [c_void_p]
        self.lib.rats_clear_historical_peers.restype = None
        
        self.lib.rats_get_historical_peer_ids.argtypes = [c_void_p, POINTER(c_int)]
        self.lib.rats_get_historical_peer_ids.restype = POINTER(c_char_p)

        # Logging functions
        self.lib.rats_set_logging_enabled.argtypes = [c_int]
        self.lib.rats_set_logging_enabled.restype = None
        
        self.lib.rats_set_log_level.argtypes = [c_char_p]
        self.lib.rats_set_log_level.restype = None
        
        self.lib.rats_set_log_file_path.argtypes = [c_void_p, c_char_p]
        self.lib.rats_set_log_file_path.restype = None
        
        self.lib.rats_get_log_file_path.argtypes = [c_void_p]
        self.lib.rats_get_log_file_path.restype = c_void_p
        
        self.lib.rats_set_log_colors_enabled.argtypes = [c_void_p, c_int]
        self.lib.rats_set_log_colors_enabled.restype = None
        
        self.lib.rats_is_log_colors_enabled.argtypes = [c_void_p]
        self.lib.rats_is_log_colors_enabled.restype = c_int
        
        self.lib.rats_set_log_timestamps_enabled.argtypes = [c_void_p, c_int]
        self.lib.rats_set_log_timestamps_enabled.restype = None
        
        self.lib.rats_is_log_timestamps_enabled.argtypes = [c_void_p]
        self.lib.rats_is_log_timestamps_enabled.restype = c_int
        
        self.lib.rats_set_log_rotation_size.argtypes = [c_void_p, c_size_t]
        self.lib.rats_set_log_rotation_size.restype = None
        
        self.lib.rats_set_log_retention_count.argtypes = [c_void_p, c_int]
        self.lib.rats_set_log_retention_count.restype = None
        
        self.lib.rats_clear_log_file.argtypes = [c_void_p]
        self.lib.rats_clear_log_file.restype = None


# Global instance
_librats = None

def get_librats() -> LibratsCtypes:
    """Get the global librats ctypes instance."""
    global _librats
    if _librats is None:
        _librats = LibratsCtypes()
    return _librats
